# DBusQTService

./: CMakeLists.txt  README.md  dbusservice.cpp  dbusservice.h  main.cpp
